--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     ]
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-flow": "^6.23.0",
+    "flow-bin": "^0.98.1",
     "jest": "^24.8.0"
   }
 }
