--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "mobx-react": "^5.4.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "stylus": "^0.54.5"
   },
   "scripts": {
     "start": "react-scripts start",
