--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.17.0",
     "axios": "^0.18.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
@@ -32,10 +33,24 @@
       "last 1 safari version"
     ]
   },
+  "babel": {
+    "plugins": [
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ]
+    ],
+    "presets": [
+      "react-app"
+    ]
+  },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "babel-cli": "^6.26.0",
+    "babel-plugin-import": "^1.11.0",
     "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.98.1",
-    "jest": "^24.8.0"
+    "flow-bin": "^0.98.1"
   }
 }
