--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
+    "test": "jest",
     "flow": "flow"
   },
   "eslintConfig": {
