--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "workbox-webpack-plugin": "4.2.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "start": "node scripts/start.js & node server.js",
+    "build": "node scripts/build.js & node server.js",
     "test": "jest",
     "flow": "flow"
   },
@@ -100,7 +100,8 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-import": "^1.11.0",
     "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.98.1"
+    "flow-bin": "^0.98.1",
+    "json-server": "^0.14.2"
   },
   "jest": {
     "collectCoverageFrom": [
